--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
     "firebase": "^11.0.1",
+    "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
     "mui": "^0.0.1",
     "next": "14.2.14",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
