--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
     "@auth/firebase-adapter": "^2.7.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
-    "firebase": "^11.0.1",
+    "firebase": "^11.0.2",
     "firebase-admin": "^12.7.0",
+    "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
     "mui": "^0.0.1",
-    "next": "14.2.14",
+    "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
