--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mui": "^0.0.1",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
